[project]
name = "cratedb-async"
version = "0.0.4"
description = ""
authors = [{ name = "surister", email = "surister98@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "httpx[http2]>=0.28.1,<0.29",
    "orjson>=3.10.14,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "trio>=0.28.0,<0.29",
    "requests>=2.32.3,<3",
    "pylint>=3.3.3,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
