[project]
name = "cratedb-async"
version = "0.0.6"
description = ""
authors = [{ name = "surister", email = "surister98@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "httpx[http2]>=0.28.1,<0.29"
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "trio>=0.29.0",
]
